@@ -1,5 +1,6 @@
 Changes for 1.6.3
 
+ - [ZBX-812] fixed Windows agent crash when using incorrect third parameter in proc_info metric (Sasha)
  - [ZBX-809] fixed memory leak while processing proc.num metric under Win2008 (Sasha)
  - [ZBX-26] added support of iowait,interrupt,softirq and steal for system.cpu.util under Linux (Sasha)
  - [ZBX-806] fixed data loss of text values processed by proxy (Sasha)
